<resources>
    <string name="app_name">Dr.Benhamou</string>
    <color name="PrimaryColor">#2196F3</color>
    <color name="PrimaryDarkColor">#1976D2</color>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Main</string>
    <string name="sent_mail_string">Visage</string>
    <string name="video_string">Videos</string>
    <string name="subheader">Chirurgie de l’homme</string>
    <string name="news_string">News</string>
    <string name="photos_string">Photos</string>
    <string name="contacts_strings">Contact</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>


    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <color name="shadow">#555555</color>
    <color name="title">#777777</color>








    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="trans">#00000000</color>
    <color name="colorPrimary">#2196F3</color>
    <color name="colorPrimaryDark">#1976D2</color>
    <color name="colorAccent">#FF4081</color>
    <color name="button_color">#E0E0E0</color>
    <color name="light_gray">#EEEEEE</color>>
    <string name="title_activity_news_detail_activity">News_detail_activity</string>
    <string name="title_activity_video_detail">VideoDetail</string>
    <string name="title_activity_send_email">Formulaire de contact</string>
</resources>
